--- a/contactus.html
+++ b/contactus.html
@@ -34,20 +34,20 @@
       </div>
       <div id="nav-menu-container">
       <ul class="nav-menu nshow">
-        <li><a href="index.html" title="Home" data-ripple=""><i class="fas fa-home"></i> Home</a></li>
-        <li><a href="processcapabilities.html" title="Process Capabilities" data-ripple=""><i class="fas fa-chart-area"></i> Process Capabilities </a></li>
-        <li><a href="products.html" title="Products" data-ripple=""><i class="fas fa-box-open"></i> Products</a></li>
-        <li><a href="aboutus.html" title="About Us" data-ripple=""><i class="fas fa-address-card"></i> About Us</a></li>
-        <li><a href="contactus.html" title="Contact Us" data-ripple="" class="menu-active"><i class="fas fa-address-book"></i> Contact Us </a></li>
+        <li><a href="index.html" title="Home" data-ripple=""> Home</a></li>
+        <li><a href="processcapabilities.html" title="Process Capabilities" data-ripple=""> Process Capabilities </a></li>
+        <li><a href="products.html" title="Products" data-ripple="">Products</a></li>
+        <li><a href="aboutus.html" title="About Us" data-ripple=""> About Us</a></li>
+        <li><a href="contactus.html" title="Contact Us" data-ripple="" class="menu-active"> Contact Us </a></li>
       </ul>
         <li class="men">
           <div id="mySidepanel" class="sidepanel">
             <button href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</button>
-            <a href="index.html"title="Home" data-ripple=""><i class="fas fa-home"></i> Home</a>
-            <a href="processcapabilities.html" title="Process Capabilities" data-ripple=""><i class="fas fa-chart-area"></i> Process Capabilities</a>
-            <a href="products.html" title="Products" data-ripple=""><i class="fas fa-box-open"></i> Products</a>
-            <a href="aboutus.html" title="About Us" data-ripple=""><i class="fas fa-address-card"></i> About Us</a>
-            <a href="contactus.html" title="Contact Us" data-ripple="" class="menu-active"><i class="fas fa-address-book"></i> Contact Us</a>
+            <a href="index.html"title="Home" data-ripple=""> Home</a>
+            <a href="processcapabilities.html" title="Process Capabilities" data-ripple=""> Process Capabilities</a>
+            <a href="products.html" title="Products" data-ripple=""> Products</a>
+            <a href="aboutus.html" title="About Us" data-ripple=""> About Us</a>
+            <a href="contactus.html" title="Contact Us" data-ripple="" class="menu-active"> Contact Us</a>
           </div>
           <button class="openbtn" onclick="openNav()"><i class="fas fa-bars"></i></button> 
         </li>
