--- a/products.html
+++ b/products.html
@@ -34,20 +34,20 @@
       </div>
       <div id="nav-menu-container">
       <ul class="nav-menu nshow">
-        <li><a href="index.html" title="Home" data-ripple=""><i class="fas fa-home"></i> Home</a></li>
-        <li><a href="processcapabilities.html" title="Process Capabilities" data-ripple=""><i class="fas fa-chart-area"></i> Process Capabilities </a></li>
-        <li><a href="products.html" title="Products" data-ripple=""><i class="fas fa-box-open" class="menu-active"></i> Products</a></li>
-        <li><a href="aboutus.html" title="About Us" data-ripple=""><i class="fas fa-address-card"></i> About Us</a></li>
-        <li><a href="contactus.html" title="Contact Us" data-ripple=""><i class="fas fa-address-book"></i> Contact Us </a></li>
+        <li><a href="index.html" title="Home" data-ripple=""> Home</a></li>
+        <li><a href="processcapabilities.html" title="Process Capabilities" data-ripple=""> Process Capabilities </a></li>
+        <li><a href="products.html" title="Products" data-ripple=""> Products</a></li>
+        <li><a href="aboutus.html" title="About Us" data-ripple="">About Us</a></li>
+        <li><a href="contactus.html" title="Contact Us" data-ripple="">Contact Us </a></li>
       </ul>
         <li class="men">
           <div id="mySidepanel" class="sidepanel">
             <button href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</button>
-            <a href="index.html"title="Home" data-ripple=""><i class="fas fa-home"></i> Home</a>
-            <a href="processcapabilities.html" title="Process Capabilities" data-ripple=""><i class="fas fa-chart-area"></i> Process Capabilities</a>
-            <a href="products.html" title="Products" data-ripple="" class="menu-active"><i class="fas fa-box-open"></i> Products</a>
-            <a href="aboutus.html" title="About Us" data-ripple=""><i class="fas fa-address-card"></i> About Us</a>
-            <a href="contactus.html" title="Contact Us" data-ripple=""><i class="fas fa-address-book"></i> Contact Us</a>
+            <a href="index.html"title="Home" data-ripple=""> Home</a>
+            <a href="processcapabilities.html" title="Process Capabilities" data-ripple=""> Process Capabilities</a>
+            <a href="products.html" title="Products" data-ripple="" class="menu-active"> Products</a>
+            <a href="aboutus.html" title="About Us" data-ripple=""> About Us</a>
+            <a href="contactus.html" title="Contact Us" data-ripple=""> Contact Us</a>
           </div>
           <button class="openbtn" onclick="openNav()"><i class="fas fa-bars"></i></button> 
         </li>
@@ -58,7 +58,86 @@
       <img src="images/123.jpg">
     <h1 class="centered"> Products</h1>
   </div>
-  <div class="contentce"></div>
+  <div id="containermain" class="containermain">
+    <div class="card">
+      <img src="images/prod2.jpg" class="image1">
+      <div class="title">
+        <span class="titlecard">Carbon Fiber Composite Rollers</span>
+      </div>
+      <div class="productcontent">
+        <p>Each Carbon Light Carbon Fiber Roller is rigorously tested for its performance before dispatch.</p><br>
+        <p>All rollers are dynamically balanced as per customer requirements.</p><br>
+        <p>Each roller is checked for its critical speed on our specially designed speed testing rig.</p><br>
+        <p>It is the great attention to detail that make our rollers best suited for any industrial application.</p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="images/prod1.jpg" class="image1">
+      <div class="title">
+        <span class="titlecard">Carbon Fiber Drive Shaft</span>
+      </div>
+      <div class="productcontent">
+        <p>Our drive shafts are available in galvanized steel, stainless steel 304, 316 and carbon fiber, designed to transmit high torque ratings for cooling tower applications. They are tubular, single-span and flexible to compensate for any misalignment.</p><br>
+        <p>All drive shafts and their components are completely interchangeable and designed as per ANSI/AGMA 9000 – D11.</p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="images/prod2.jpg" class="image1">
+      <div class="title">
+        <span class="titlecard">Carbon Fiber Composite Rollers</span>
+      </div>
+      <div class="productcontent">
+        <p>Each Carbon Light Carbon Fiber Roller is rigorously tested for its performance before dispatch.</p><br>
+        <p>All rollers are dynamically balanced as per customer requirements.</p><br>
+        <p>Each roller is checked for its critical speed on our specially designed speed testing rig.</p><br>
+        <p>It is the great attention to detail that make our rollers best suited for any industrial application.</p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="images/prod1.jpg" class="image1">
+      <div class="title">
+        <span class="titlecard">Carbon Fiber Drive Shaft</span>
+      </div>
+      <div class="productcontent">
+        <p>Our drive shafts are available in galvanized steel, stainless steel 304, 316 and carbon fiber, designed to transmit high torque ratings for cooling tower applications. They are tubular, single-span and flexible to compensate for any misalignment.</p><br>
+        <p>All drive shafts and their components are completely interchangeable and designed as per ANSI/AGMA 9000 – D11.</p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="images/prod2.jpg" class="image1">
+      <div class="title">
+        <span class="titlecard">Carbon Fiber Composite Rollers</span>
+      </div>
+      <div class="productcontent">
+        <p>Each Carbon Light Carbon Fiber Roller is rigorously tested for its performance before dispatch.</p><br>
+        <p>All rollers are dynamically balanced as per customer requirements.</p><br>
+        <p>Each roller is checked for its critical speed on our specially designed speed testing rig.</p><br>
+        <p>It is the great attention to detail that make our rollers best suited for any industrial application.</p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="images/prod1.jpg" class="image1">
+      <div class="title">
+        <span class="titlecard">Carbon Fiber Drive Shaft</span>
+      </div>
+      <div class="productcontent">
+        <p>Our drive shafts are available in galvanized steel, stainless steel 304, 316 and carbon fiber, designed to transmit high torque ratings for cooling tower applications. They are tubular, single-span and flexible to compensate for any misalignment.</p><br>
+        <p>All drive shafts and their components are completely interchangeable and designed as per ANSI/AGMA 9000 – D11.</p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="images/prod2.jpg" class="image1">
+      <div class="title">
+        <span class="titlecard">Carbon Fiber Composite Rollers</span>
+      </div>
+      <div class="productcontent">
+        <p>Each Carbon Light Carbon Fiber Roller is rigorously tested for its performance before dispatch.</p><br>
+        <p>All rollers are dynamically balanced as per customer requirements.</p><br>
+        <p>Each roller is checked for its critical speed on our specially designed speed testing rig.</p><br>
+        <p>It is the great attention to detail that make our rollers best suited for any industrial application.</p>
+      </div>
+    </div>
+  </div>
   <div class="footer">
     <div class="leftalign">© 2021 Aviscraft Advanced Materials</div>
     <div class="rightalign">Developed by BHARATHRAJ M (bharathrajmuthu@gmail.com)</div>
