--- a/aboutus.html
+++ b/aboutus.html
@@ -60,15 +60,14 @@
   </div>
   <div class="aboutuscontainer">
     <div class="aboutusabout">
-      <span class="title">About us</span>
       <span class="parag">Aviscraft Advanced Materials Private Limited is a solution provider and manufacturer of advanced and innovative composites catering to defence, aerospace, medical and automotive markets. We High technical fabrics made from carbon, glass, aramid and natural fibres are used to provide end to end engineering solutions to our customers. Our operations include design, prototype development, testing, manufacturing and commissioning state of art composite solutions.</span>
     </div>
     <div class="aboutusabout">
-      <span class="title">Our goal</span>
+      <span class="title">Corporate Objective</span>
       <span class="parag">Aviscraft Advanced Materials Private Limited initiate and implement long term growth strategies to be a pioneer in the industry through performance and innovative technologies.</span>
     </div>
     <div class="aboutusabout">
-      <span class="title">Our mission</span>
+      <span class="title">Our Vission</span>
       <span class="parag">Aviscraft Advanced Materials Private Limited is a company aimed at delivering quality solutions for our partners with best of technology and people. We are committed to sustaining a lead position as a trusted solution provider. At  Aviscraft Advanced Materials, we anticipate needs, nurture ideas and continue to add value to our partners. </span>
     </div>
   </div>
