--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@
       <div id="nav-menu-container">
       <ul class="nav-menu nshow">
         <li><a href="index.html" title="Home" data-ripple="" class="menu-active">Home</a></li>
+        <li><a href="aboutus.html" title="About Us" data-ripple="">About Us</a></li>
         <li><a href="processcapabilities.html" title="Process Capabilities" data-ripple="">Process Capabilities </a></li>
         <li><a href="products.html" title="Products" data-ripple="">Products</a></li>
-        <li><a href="aboutus.html" title="About Us" data-ripple="">About Us</a></li>
         <li><a href="contactus.html" title="Contact Us" data-ripple="">Contact Us </a></li>
       </ul>
         <li class="men">
           <div id="mySidepanel" class="sidepanel">
             <button href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</button>
             <a href="index.html"title="Home" data-ripple="" class="menu-active">Home</a>
+            <a href="aboutus.html" title="About Us" data-ripple=""> About Us</a>
             <a href="processcapabilities.html" title="Process Capabilities" data-ripple=""> Process Capabilities</a>
             <a href="products.html" title="Products" data-ripple="">Products</a>
-            <a href="aboutus.html" title="About Us" data-ripple=""> About Us</a>
             <a href="contactus.html" title="Contact Us" data-ripple=""> Contact Us</a>
           </div>
           <button class="openbtn" onclick="openNav()"><i class="fas fa-bars"></i></button> 
@@ -66,35 +66,72 @@
       <img src="images/aerospace1.jpg" style="width:100%">
     </div>
   </div>
-  <div class="homeabout">
-    <span class="title">Aviscraft Advanced Materials (P) LTD</span>
-    <span class="parag">Aviscraft Advanced Materials Private Limited is a solution provider and manufacturer of advanced and innovative composites catering to defence, aerospace, medical and automotive markets. We High technical fabrics made from carbon, glass, aramid and natural fibres are used to provide end to end engineering solutions to our customers. Our operations include design, prototype development, testing, manufacturing and commissioning state of art composite solutions.</span>
+  <div class="homecontainer">
+    <div class="parag">
+      <span>With decades of experience in textile industry, We strongly believe that textile is a versatile sector which is much more than just apparels. Aviscraft Advanced Materials is our endeavour to branch into the area of material science to attain growth and development with textile as foundation. Our primary focus is on new fibres and innovative technologies that reduce environmental impact, enhance product outcomes and equip Aviscraft Advanced Materials with a market advantage. We manufacture advanced composites with Carbon fibre, Glass, Aramid and other natural fibres for defence, aerospace, medical and automotive markets.</span>
+    </div>
+    <div class="image">
+      <img src="images/mainobject.jpg" style="width:80%">
+    </div>
   </div>
-  <div class="whycfrp">
-    <span class="title">Why Carbon Fiber Reinforced Polymer (CFRP)?</span>
-    <div class="properties">
-      <div class="propertiesl">
-        <div class="elasticity">
-          <img src="images/elasticity.jpg">
-          <h1>Elasticity</h1>
-          <span>Very high modulus</span>
-        </div>
-        <div class="chemical">
-          <img src="images/chemicalinertness.jpg">
-          <h1>Chemical Inertness</h1>
-          <span>High Chemical Inertness</span>
+  <div class="homeexpertise">
+    <span class="title">Our Expertise</span>
+    <span class="parag">Every challenge requires a unique solutions and ideas to solve. Based on our expertise, we provide bespoke solutions that are as diverse as the needs of our customers. Here, We understand the critical aspects of customer’s requirement and validate the design & process using material science to provide the standard solution.</span>
+  </div>
+  <div class="ourbusiness">
+    <span class="title">Our Businesses</span>
+    <div class="row">
+      <div class="column">
+        <img src="images/1.jpg" style="width:100%">
+        <div class="parag">  
+          <span class="text">Carbon fiber composites</span>
         </div>
       </div>
-      <div class="propertiesr">
-        <div class="tensile">
-          <img src="images/tensile.jpg">
-          <h1>Tensile</h1>
-          <span>Super High Tensile Strength</span>
+      <div class="column">
+        <img src="images/2.jpg" style="width:100%">
+        <div class="parag">  
+          <span class="text">Fiber glass moulded components</span>
         </div>
-        <div class="lowdensity">
-          <img src="images/lowdensity.jpg">
-          <h1>Low density</h1>
-          <span>It is Lightweight Material</span>
+      </div>
+      <div class="column">
+        <img src="images/3.jpg" style="width:100%">
+        <div class="parag">  
+          <span class="text">Technical fabrics</span>
+        </div>
+      </div>
+      <div class="column">
+        <img src="images/4.jpg" style="width:100%">
+        <div class="parag">  
+          <span class="text">Technical yarn</span>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="ourbusiness">
+    <span class="title">Markets</span>
+    <div class="row">
+      <div class="column">
+        <img src="images/1.jpg" style="width:100%">
+        <div class="parag">  
+          <span class="text">Aerospace & Defence</span>
+        </div>
+      </div>
+      <div class="column">
+        <img src="images/2.jpg" style="width:100%">
+        <div class="parag">  
+          <span class="text">Industrial components</span>
+        </div>
+      </div>
+      <div class="column">
+        <img src="images/3.jpg" style="width:100%">
+        <div class="parag">  
+          <span class="text">Sports equipments</span>
+        </div>
+      </div>
+      <div class="column">
+        <img src="images/4.jpg" style="width:100%">
+        <div class="parag">  
+          <span class="text">Automotive components</span>
         </div>
       </div>
     </div>
