--- a/aboutus.html
+++ b/aboutus.html
@@ -67,7 +67,7 @@
       <span class="parag">Aviscraft Advanced Materials Private Limited initiate and implement long term growth strategies to be a pioneer in the industry through performance and innovative technologies.</span>
     </div>
     <div class="aboutusabout">
-      <span class="title">Our Vission</span>
+      <span class="title">Our Vision</span>
       <span class="parag">Aviscraft Advanced Materials Private Limited is a company aimed at delivering quality solutions for our partners with best of technology and people. We are committed to sustaining a lead position as a trusted solution provider. At  Aviscraft Advanced Materials, we anticipate needs, nurture ideas and continue to add value to our partners. </span>
     </div>
   </div>
