--- a/index.html
+++ b/index.html
@@ -82,25 +82,25 @@
     <span class="title">Our Businesses</span>
     <div class="row">
       <div class="column">
-        <img src="images/1.jpg" style="width:100%">
+        <img class="images" src="images/1.jpg">
         <div class="parag">  
           <span class="text">Carbon fiber composites</span>
         </div>
       </div>
       <div class="column">
-        <img src="images/2.jpg" style="width:100%">
+        <img class="images" src="images/2.jpg">
         <div class="parag">  
           <span class="text">Fiber glass moulded components</span>
         </div>
       </div>
       <div class="column">
-        <img src="images/3.jpg" style="width:100%">
+        <img class="images" src="images/3.jpg">
         <div class="parag">  
           <span class="text">Technical fabrics</span>
         </div>
       </div>
       <div class="column">
-        <img src="images/4.jpg" style="width:100%">
+        <img class="images" src="images/4.jpg">
         <div class="parag">  
           <span class="text">Technical yarn</span>
         </div>
@@ -111,25 +111,25 @@
     <span class="title">Markets</span>
     <div class="row">
       <div class="column">
-        <img src="images/1.jpg" style="width:100%">
+        <img class="images" src="images/1.jpg">
         <div class="parag">  
           <span class="text">Aerospace & Defence</span>
         </div>
       </div>
       <div class="column">
-        <img src="images/2.jpg" style="width:100%">
+        <img class="images" src="images/2.jpg">
         <div class="parag">  
           <span class="text">Industrial components</span>
         </div>
       </div>
       <div class="column">
-        <img src="images/3.jpg" style="width:100%">
+        <img class="images" src="images/3.jpg">
         <div class="parag">  
           <span class="text">Sports equipments</span>
         </div>
       </div>
       <div class="column">
-        <img src="images/4.jpg" style="width:100%">
+        <img class="images" src="images/4.jpg">
         <div class="parag">  
           <span class="text">Automotive components</span>
         </div>
