--- a/products.html
+++ b/products.html
@@ -59,82 +59,74 @@
     <h1 class="centered"> Products</h1>
   </div>
   <div id="containermain" class="containermain">
+    <span class="maintitle">Advanced Composites</span>
     <div class="card">
-      <img src="images/prod2.jpg" class="image1">
       <div class="title">
-        <span class="titlecard">Carbon Fiber Composite Rollers</span>
+        <span >Carbon fiber composites</span>
       </div>
       <div class="productcontent">
-        <p>Each Carbon Light Carbon Fiber Roller is rigorously tested for its performance before dispatch.</p><br>
-        <p>All rollers are dynamically balanced as per customer requirements.</p><br>
-        <p>Each roller is checked for its critical speed on our specially designed speed testing rig.</p><br>
-        <p>It is the great attention to detail that make our rollers best suited for any industrial application.</p>
+        <p>To help you navigate the complexities involved in designing and manufacturing composites products we provides support through the value chain.</p>
+      </div>
+      <div class="rmcont">
+        <button class="rmbutton">READ MORE <i class="fas fa-arrow-right"></i></button>
       </div>
     </div>
     <div class="card">
-      <img src="images/prod1.jpg" class="image1">
       <div class="title">
-        <span class="titlecard">Carbon Fiber Drive Shaft</span>
+        <span >Carbon laminates</span>
       </div>
       <div class="productcontent">
-        <p>Our drive shafts are available in galvanized steel, stainless steel 304, 316 and carbon fiber, designed to transmit high torque ratings for cooling tower applications. They are tubular, single-span and flexible to compensate for any misalignment.</p><br>
-        <p>All drive shafts and their components are completely interchangeable and designed as per ANSI/AGMA 9000 – D11.</p>
+        <p>We manufacture and supply strong and lightweight composites structures using the latest Pultrusion technology under its _ range of Pultruded carbon-Fiber laminates.</p>
+      </div>
+      <div class="rmcont">
+        <button class="rmbutton">READ MORE <i class="fas fa-arrow-right"></i></button>
       </div>
     </div>
     <div class="card">
-      <img src="images/prod2.jpg" class="image1">
       <div class="title">
-        <span class="titlecard">Carbon Fiber Composite Rollers</span>
+        <span >Fibre glass moulded components</span>
       </div>
       <div class="productcontent">
-        <p>Each Carbon Light Carbon Fiber Roller is rigorously tested for its performance before dispatch.</p><br>
-        <p>All rollers are dynamically balanced as per customer requirements.</p><br>
-        <p>Each roller is checked for its critical speed on our specially designed speed testing rig.</p><br>
-        <p>It is the great attention to detail that make our rollers best suited for any industrial application.</p>
+        <p>Bhor manufactures a wide spectrum of high performance materials extending from reinforcement fabrics to prepreg and speciality chemicals. Which Includes Carbon fiber Fabrics, Aramid Fabric, etc.</p>
+      </div>
+      <div class="rmcont">
+        <button class="rmbutton">READ MORE <i class="fas fa-arrow-right"></i></button>
+      </div>
+    </div>
+  </div>
+  <div id="containermain" class="containermain">
+    <span class="maintitle">Tchnical Fabrics & Yarns</span>
+    <div class="card">
+      <div class="title">
+        <span >Reinforce fabrics</span>
+      </div>
+      <div class="productcontent">
+        <p>To help you navigate the complexities involved in designing and manufacturing composites products we provides support through the value chain.</p>
+      </div>
+      <div class="rmcont">
+        <button class="rmbutton">READ MORE <i class="fas fa-arrow-right"></i></button>
       </div>
     </div>
     <div class="card">
-      <img src="images/prod1.jpg" class="image1">
       <div class="title">
-        <span class="titlecard">Carbon Fiber Drive Shaft</span>
+        <span >Reinforcement unidirectional</span>
       </div>
       <div class="productcontent">
-        <p>Our drive shafts are available in galvanized steel, stainless steel 304, 316 and carbon fiber, designed to transmit high torque ratings for cooling tower applications. They are tubular, single-span and flexible to compensate for any misalignment.</p><br>
-        <p>All drive shafts and their components are completely interchangeable and designed as per ANSI/AGMA 9000 – D11.</p>
+        <p>We manufacture and supply strong and lightweight composites structures using the latest Pultrusion technology under its _ range of Pultruded carbon-Fiber laminates.</p>
+      </div>
+      <div class="rmcont">
+        <button class="rmbutton">READ MORE <i class="fas fa-arrow-right"></i></button>
       </div>
     </div>
     <div class="card">
-      <img src="images/prod2.jpg" class="image1">
       <div class="title">
-        <span class="titlecard">Carbon Fiber Composite Rollers</span>
+        <span >Spun yarn</span>
       </div>
       <div class="productcontent">
-        <p>Each Carbon Light Carbon Fiber Roller is rigorously tested for its performance before dispatch.</p><br>
-        <p>All rollers are dynamically balanced as per customer requirements.</p><br>
-        <p>Each roller is checked for its critical speed on our specially designed speed testing rig.</p><br>
-        <p>It is the great attention to detail that make our rollers best suited for any industrial application.</p>
+        <p>To assist first time users &amp; enthusiast for building own carbon-fiber parts we market and sells a wide array of recreational ready to use Carbon Composite Kits &amp; consumables under brand.</p>
       </div>
-    </div>
-    <div class="card">
-      <img src="images/prod1.jpg" class="image1">
-      <div class="title">
-        <span class="titlecard">Carbon Fiber Drive Shaft</span>
-      </div>
-      <div class="productcontent">
-        <p>Our drive shafts are available in galvanized steel, stainless steel 304, 316 and carbon fiber, designed to transmit high torque ratings for cooling tower applications. They are tubular, single-span and flexible to compensate for any misalignment.</p><br>
-        <p>All drive shafts and their components are completely interchangeable and designed as per ANSI/AGMA 9000 – D11.</p>
-      </div>
-    </div>
-    <div class="card">
-      <img src="images/prod2.jpg" class="image1">
-      <div class="title">
-        <span class="titlecard">Carbon Fiber Composite Rollers</span>
-      </div>
-      <div class="productcontent">
-        <p>Each Carbon Light Carbon Fiber Roller is rigorously tested for its performance before dispatch.</p><br>
-        <p>All rollers are dynamically balanced as per customer requirements.</p><br>
-        <p>Each roller is checked for its critical speed on our specially designed speed testing rig.</p><br>
-        <p>It is the great attention to detail that make our rollers best suited for any industrial application.</p>
+      <div class="rmcont">
+        <button class="rmbutton">READ MORE <i class="fas fa-arrow-right"></i></button>
       </div>
     </div>
   </div>
