--- a/products.html
+++ b/products.html
@@ -37,7 +37,7 @@
         <li><a href="index.html" title="Home" data-ripple=""> Home</a></li>
         <li><a href="aboutus.html" title="About Us" data-ripple="">About Us</a></li>
         <li><a href="processcapabilities.html" title="Process Capabilities" data-ripple=""> Process Capabilities </a></li>
-        <li><a href="products.html" title="Products" data-ripple=""> Products</a></li>
+        <li><a href="products.html" title="Products" data-ripple="" class="menu-active"> Products</a></li>
         <li><a href="contactus.html" title="Contact Us" data-ripple="">Contact Us </a></li>
       </ul>
         <li class="men">
