--- a/index.html
+++ b/index.html
@@ -136,6 +136,42 @@
       </div>
     </div>
   </div>
+  <div class="quickfooter">
+    <div class="quickaddress">
+      <div class="contentaddress">
+        <div><i class="fas fa-map-marker-alt"></i></div>
+        <div>
+          <span>AVISCRAFT ADVANCED MATERIALS (P) LTD</span><br>
+          <span>SF No. 122/A2, Mopperipalayam Village,</span><br>
+          <span>Vagarayampalayam (PO),</span><br>
+          <span>Karumathamapatti (via)</span><br>
+          <span>Coimbatore - 641659</span><br>
+        </div>
+      </div>
+      <div class="contentaddress">
+        <div><i class="fas fa-envelope"></i></div>
+        <div>
+          <span>info@aviscraftmaterials.com</span>
+        </div>
+      </div>
+      <div class="contentaddress">
+        <div><i class="fas fa-phone-alt"></i></div>
+        <div>
+          <span>6369225608</span>
+        </div>
+      </div>
+    </div>
+    <div class="quicklink">
+      <div class="contentaddlink">
+        <span class="title">Quick Links</span>
+        <a href="index.html"title="Home" data-ripple="" class="menu-active">Home</a>
+        <a href="aboutus.html" title="About Us" data-ripple=""> About Us</a>
+        <a href="processcapabilities.html" title="Process Capabilities" data-ripple=""> Process Capabilities</a>
+        <a href="products.html" title="Products" data-ripple="">Products</a>
+        <a href="contactus.html" title="Contact Us" data-ripple=""> Contact Us</a>
+      </div>
+    </div>
+  </div>
   <div class="footer">
     <div class="leftalign">© 2021 Aviscraft Advanced Materials</div>
     <div class="rightalign">Developed by BHARATHRAJ M (bharathrajmuthu@gmail.com)</div>
