--- a/contactus.html
+++ b/contactus.html
@@ -102,6 +102,42 @@
   <div class="mapview">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3914.613788909916!2d77.12809411455838!3d11.142114492073953!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba8ff7eb9530e17%3A0x4743a102897d773a!2sAviscraft%20Advanced%20Materials%20Private%20Limited!5e0!3m2!1sen!2sin!4v1626541501006!5m2!1sen!2sin" width="100%" height="450" style="border:0;"></iframe>
   </div>
+  <div class="quickfooter">
+    <div class="quickaddress">
+      <div class="contentaddress">
+        <div><i class="fas fa-map-marker-alt"></i></div>
+        <div>
+          <span>AVISCRAFT ADVANCED MATERIALS (P) LTD</span><br>
+          <span>SF No. 122/A2, Mopperipalayam Village,</span><br>
+          <span>Vagarayampalayam (PO),</span><br>
+          <span>Karumathamapatti (via)</span><br>
+          <span>Coimbatore - 641659</span><br>
+        </div>
+      </div>
+      <div class="contentaddress">
+        <div><i class="fas fa-envelope"></i></div>
+        <div>
+          <span>info@aviscraftmaterials.com</span>
+        </div>
+      </div>
+      <div class="contentaddress">
+        <div><i class="fas fa-phone-alt"></i></div>
+        <div>
+          <span>6369225608</span>
+        </div>
+      </div>
+    </div>
+    <div class="quicklink">
+      <div class="contentaddlink">
+        <span class="title">Quick Links</span>
+        <a href="index.html"title="Home" data-ripple="">Home</a>
+        <a href="aboutus.html" title="About Us" data-ripple=""> About Us</a>
+        <a href="processcapabilities.html" title="Process Capabilities" data-ripple=""> Process Capabilities</a>
+        <a href="products.html" title="Products" data-ripple="">Products</a>
+        <a href="contactus.html" title="Contact Us" data-ripple="" class="menu-active"> Contact Us</a>
+      </div>
+    </div>
+  </div>
   <div class="footer">
     <div class="leftalign">© 2021 Aviscraft Advanced Materials</div>
     <div class="rightalign">Developed by BHARATHRAJ M (bharathrajmuthu@gmail.com)</div>
