--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <header id="header">
     <div class="container">
       <div class="logo">
-        <a><img src="images/aviscraft-logo.png" alt="" title=""></a>
+        <a href="index.html" title="Home" data-ripple=""><img src="images/aviscraft-logo.png" alt="" title=""></a>
       </div>
       <div id="nav-menu-container">
       <ul class="nav-menu nshow">
