--- a/products.html
+++ b/products.html
@@ -94,11 +94,11 @@
       </div>
     </div>
   </div>
-  <div id="containermain" class="containermain">
-    <span class="maintitle">Tchnical Fabrics & Yarns</span>
+  <div id="containermain" class="containermain containermainsub">
+    <span class="maintitle">Technical Fabrics & Yarns</span>
     <div class="card">
       <div class="title">
-        <span >Reinforce fabrics</span>
+        <span >Reinforcement fabrics</span>
       </div>
       <div class="productcontent">
         <p>To help you navigate the complexities involved in designing and manufacturing composites products we provides support through the value chain.</p>
