--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </div>
   <div class="homecontainer">
     <div class="parag">
-      <span class="title">Integrating Advanced Material Science For A Sustainable World</span>
+      <span class="title">Integrating advanced material science for a sustainable world</span>
       <span>With decades of experience in textile industry, We strongly believe that textile is a versatile sector which is much more than just apparels. Aviscraft Advanced Materials is our endeavour to branch into the area of material science to attain growth and development with textile as foundation. Our primary focus is on new fibres and innovative technologies that reduce environmental impact, enhance product outcomes and equip Aviscraft Advanced Materials with a market advantage. We manufacture advanced composites with Carbon fibre, Glass, Aramid and other natural fibres for defence, aerospace, medical and automotive markets.</span>
     </div>
     <div class="image">
@@ -77,6 +77,9 @@
   </div>
   <div class="homeexpertise">
     <span class="title">Our Expertise</span>
+    <span class="linestart"></span>
+    <span class="boxfull"></span>
+    <span class="lineend"></span>
     <span class="parag">Every challenge requires a unique solutions and ideas to solve. Based on our expertise, we provide bespoke solutions that are as diverse as the needs of our customers. Here, We understand the critical aspects of customer’s requirement and validate the design & process using material science to provide the standard solution.</span>
   </div>
   <div class="ourbusiness">
@@ -107,8 +110,13 @@
       </div>
     </div>
   </div>
-  <div class="ourbusiness">
+  <div class="markets">
     <span class="title">Markets</span>
+    <span class="linestart"></span>
+    <span class="boxfull"></span>
+    <span class="lineend"></span>
+  </div>
+  <div class="ourbusiness">
     <div class="row">
       <div class="column">
         <img class="images" src="images/1.jpg">
