--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
   
 </script>
 <body>
+  <div class="quickheader">
+    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="#"><i class="fab fa-whatsapp"></i></a>
+    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+  </div>
   <!--==========================
     Header
   ============================-->
@@ -78,7 +84,6 @@
   <div class="homeexpertise">
     <span class="title">Our Expertise</span>
     <span class="linestart"></span>
-    <span class="boxfull"></span>
     <span class="lineend"></span>
     <span class="parag">Every challenge requires a unique solutions and ideas to solve. Based on our expertise, we provide bespoke solutions that are as diverse as the needs of our customers. Here, We understand the critical aspects of customer’s requirement and validate the design & process using material science to provide the standard solution.</span>
   </div>
@@ -87,25 +92,25 @@
       <div class="column">
         <img class="images" src="images/1.jpg">
         <div class="parag">  
-          <span class="text">Carbon fiber composites</span>
+          <span class="text">Carbon Fiber Composites</span>
         </div>
       </div>
       <div class="column">
         <img class="images" src="images/2.jpg">
         <div class="parag">  
-          <span class="text">Fiber glass moulded components</span>
+          <span class="text">Fiber Glass Moulded Components</span>
         </div>
       </div>
       <div class="column">
         <img class="images" src="images/3.jpg">
         <div class="parag">  
-          <span class="text">Technical fabrics</span>
+          <span class="text">Technical Fabrics</span>
         </div>
       </div>
       <div class="column">
         <img class="images" src="images/4.jpg">
         <div class="parag">  
-          <span class="text">Technical yarn</span>
+          <span class="text">Technical Yarn</span>
         </div>
       </div>
     </div>
@@ -113,36 +118,7 @@
   <div class="markets">
     <span class="title">Markets</span>
     <span class="linestart"></span>
-    <span class="boxfull"></span>
     <span class="lineend"></span>
-  </div>
-  <div class="ourbusiness">
-    <div class="row">
-      <div class="column">
-        <img class="images" src="images/1.jpg">
-        <div class="parag">  
-          <span class="text">Aerospace & Defence</span>
-        </div>
-      </div>
-      <div class="column">
-        <img class="images" src="images/2.jpg">
-        <div class="parag">  
-          <span class="text">Industrial components</span>
-        </div>
-      </div>
-      <div class="column">
-        <img class="images" src="images/3.jpg">
-        <div class="parag">  
-          <span class="text">Sports equipments</span>
-        </div>
-      </div>
-      <div class="column">
-        <img class="images" src="images/4.jpg">
-        <div class="parag">  
-          <span class="text">Automotive components</span>
-        </div>
-      </div>
-    </div>
   </div>
   <div class="quickfooter">
     <div class="quickaddress">
