--- a/processcapabilities.html
+++ b/processcapabilities.html
@@ -24,6 +24,12 @@
 
 </script>
 <body>
+  <div class="quickheader">
+    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="#"><i class="fab fa-whatsapp"></i></a>
+    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+  </div>
   <!--==========================
     Header
   ============================-->
