--- a/aboutus.html
+++ b/aboutus.html
@@ -24,7 +24,7 @@
 
 </script>
 <body>
-  <div class="quickheader">
+  <div class="quickheaderpages">
     <a href="#"><i class="fab fa-instagram"></i></a>
     <a href="#"><i class="fab fa-whatsapp"></i></a>
     <a href="#"><i class="fab fa-twitter"></i></a>
@@ -69,10 +69,14 @@
   </div>
   <div class="aboutusabout">
     <span class="title">Corporate Objective</span>
+    <span class="linestart"></span>
+    <span class="lineend"></span>
     <span class="parag">Aviscraft Advanced Materials Private Limited initiate and implement long term growth strategies to be a pioneer in the industry through performance and innovative technologies.</span>
   </div>
   <div class="aboutusabout">
     <span class="title">Our Vision</span>
+    <span class="linestart1"></span>
+    <span class="lineend1"></span>
     <span class="parag">Aviscraft Advanced Materials Private Limited is a company aimed at delivering quality solutions for our partners with best of technology and people. We are committed to sustaining a lead position as a trusted solution provider. At  Aviscraft Advanced Materials, we anticipate needs, nurture ideas and continue to add value to our partners. </span>
   </div>
   <div class="quickfooter">
