--- a/contactus.html
+++ b/contactus.html
@@ -24,7 +24,7 @@
 
 </script>
 <body>
-  <div class="quickheader">
+  <div class="quickheaderpages">
     <a href="#"><i class="fab fa-instagram"></i></a>
     <a href="#"><i class="fab fa-whatsapp"></i></a>
     <a href="#"><i class="fab fa-twitter"></i></a>
