--- a/products.html
+++ b/products.html
@@ -24,7 +24,7 @@
 
 </script>
 <body>
-  <div class="quickheader">
+  <div class="quickheaderpages">
     <a href="#"><i class="fab fa-instagram"></i></a>
     <a href="#"><i class="fab fa-whatsapp"></i></a>
     <a href="#"><i class="fab fa-twitter"></i></a>
@@ -66,6 +66,8 @@
   </div>
   <div id="containermain" class="containermain">
     <span class="maintitle">Advanced Composites</span>
+    <span class="linestart"></span>
+    <span class="lineend"></span>
     <div class="card">
       <div class="title">
         <span >Carbon fiber composites</span>
@@ -102,6 +104,8 @@
   </div>
   <div id="containermain" class="containermain containermainsub">
     <span class="maintitle">Technical Fabrics & Yarns</span>
+    <span class="linestart"></span>
+    <span class="lineend1"></span>
     <div class="card">
       <div class="title">
         <span >Reinforcement fabrics</span>
