--- a/processcapabilities.html
+++ b/processcapabilities.html
@@ -24,7 +24,7 @@
 
 </script>
 <body>
-  <div class="quickheader">
+  <div class="quickheaderpages">
     <a href="#"><i class="fab fa-instagram"></i></a>
     <a href="#"><i class="fab fa-whatsapp"></i></a>
     <a href="#"><i class="fab fa-twitter"></i></a>
@@ -64,7 +64,82 @@
       <img src="images/123.jpg">
     <h1 class="centered"> Process Capabilities</h1>
   </div>
-  <div class="contentce"></div>
+  <div class="processcont">
+    <span class="title">Manufacturing</span>
+    <span class="linestart"></span>
+    <span class="lineend"></span>
+    <span class="subtitle">Advanced Composite</span>
+    <span class="subsubtitle">Product Development</span>
+    <!-- <div class="flowchart">
+      <div class="flow1">
+        <div class="flow1-1">
+          <div class="flow1-1-2">
+            <span>Design and Development</span>
+          </div>
+        </div>
+        <div class="flow1-2">
+          <div class="flow1-2-1">
+            <span>Design feasitility</span>
+          </div>
+          <div class="flow1-2-2">
+            <span>Tooling and machining</span>
+          </div>
+        </div>
+      </div>
+      <div class="flow2">
+        <div class="flow2-1">
+          <div class="flow2-1-1">
+            <span>Prototype development</span>
+          </div>
+          <div class="flow2-1-2">
+           <span>Testing</span>
+          </div>
+        </div>
+        <div class="flow2-2">
+          <div class="flow2-2-1">
+            <span>Production optimization</span>
+          </div>
+          <div class="flow2-2-2">
+            <span>Product manufacturing</span>
+          </div>
+        </div>
+      </div>
+    </div> -->
+    <div class="processflow">
+      <span class="subsubtitle">Design and development</span>
+      <span class="parag">Aviscraft with its expertin in design and development has provided long term solutions with optimized design and make them familiar with key benefits of using composite as a replacements of other materials.</span>
+    </div>
+    <div class="processflow">
+      <span class="subsubtitle">Design feasitivity</span>
+      <span class="parag">Our simulated results are thoroughly studied and accessed with experimental and theoretical date using advanced softwares to study the feasitility of the design developed.</span>
+    </div>
+    <div class="processflow">
+      <span class="subsubtitle">Tooling and machining</span>
+      <span class="parag">With strong technical background our engineers offer advice on the tools and machining processes required to manufacture the prototype with exact dimensions and tolerances.</span>
+    </div>
+    <div class="processflow">
+      <span class="subsubtitle">Prototype development and manufacturing</span>
+      <span class="parag">Our composite workshop in equipped to provide our stop solution from parts manufacturing to assembly of compsite structures under our roof. High proficient and experienced human resource in composite manufacturing adds and the core strength of our organization.</span><br>
+      <span class="parag heading">over manufacturing process include:</span>
+      <span class="parag points">Hand laying</span>
+      <span class="parag points">Mold making(small batch production)</span>
+      <span class="parag points">Vaccum assisted resine imfusion moulding</span>
+      <span class="parag points">Resin transfer moulding</span>
+      <span class="parag points">Proprag and autoclare</span>
+    </div>
+    <div class="processflow">
+      <span class="subsubtitle">Testing</span>
+      <span class="parag">The facility is comprehensially equipped and carry out mechanical and testing of materials, dimensional inspection, non-destructive testing composite testing are very vital through out the product life cycle. We test for properties such as tensile strength, flexural strength, tensile stress,  compressive stress, scheme stress and toughness.</span>
+    </div>
+    <div class="headingflow">
+      <span class="subtitle">Weaving</span>
+      <span class="parag">Aviscraft advanced materials offen wide range of woves fabric for various outdoor/indoor applications we produce fabrics with the latest technology by offering our customer consistent quality and immatched programmes.</span>
+    </div>
+    <div class="headingflow">
+      <span class="subtitle">Weaving</span>
+      <span class="parag">Aviscraft advanced materials offen wide range of woves fabric for various outdoor/indoor applications we produce fabrics with the latest technology by offering our customer consistent quality and immatched programmes.</span>
+    </div>
+  </div>
   <div class="quickfooter">
     <div class="quickaddress">
       <div class="contentaddress">
